samples/_failures_safe/1761716935_0315d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f1efae1.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_0f1efae1.c:159:9: error: missing terminating " character
  159 |         "ID
      |         ^~~
./samples/SAFE/__tmp_0f1efae1.c:159:9: error: expected expression at end of input
./samples/SAFE/__tmp_0f1efae1.c:159:9: error: expected declaration or statement at end of input
